# discordbot_poise

./: .gitignore  Cargo.toml  config.json.example
src/: command.rs  command_check.rs  config.rs  data.rs  error.rs  features.rs  globalchat.rs  http_server.rs  listener.rs  main.rs  on_error.rs  ready.rs
src/command/: general.rs  member_manager.rs  owner.rs  sns_post.rs
src/command/owner/: mute.rs
src/config/: data.rs  guild_config.rs  member_manager.rs
src/data/: backup.rs  globalchat.rs  sns_post.rs
src/data/backup/: build_message.rs  send_category.rs  send_guild.rs
src/data/globalchat/: collect_webhook.rs  is_globalchat.rs  send_msg.rs  set_unset_channel.rs
src/data/sns_post/: mastodon.rs  twitter.rs
src/features/: backup.rs  globalchat.rs
src/features/backup/: build_message.rs  send_category.rs  send_guild.rs
src/features/globalchat/: collect_webhook.rs  is_globalchat.rs  send_msg.rs  set_unset_channel.rs
src/http_server/: oauth.rs
src/listener/: channel_create.rs  channel_delete.rs  channel_update.rs  guild_member_removal.rs  message.rs  message_delete.rs  message_delete_bulk.rs  message_update.rs  thread_create.rs
