[package]
name = "bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poise = "0.5"
serde_json = "1"
tokio-stream = "0.1"

[dependencies.serenity]
version = "0.11"
default-features = false
features = [
    "builder",
    "cache",
    "collector",
    "client",
    "gateway",
    "http",
    "model",
    "utils",
    "temp_cache",
    "rustls_backend",
    "chrono",
]

[dependencies.tokio]
version = "1"
features = ["full"]

[dependencies.serde]
version = "1"
features = ["derive", "unstable", "alloc", "rc"]

[dependencies.sqlx]
version = "0.6"
features = ["runtime-tokio-rustls", "mysql", "tls"]

[dependencies.chrono]
version = "0.4"
features = ["serde"]