[package]
name = "bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mimalloc = { version = "0.1", default-features = false }
serde = { version = "1", features = ["derive", "alloc", "rc"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }

tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"

serenity = { version = "0.11", default-features = false, features = [
    "builder",
    "cache",
    "collector",
    "client",
    "gateway",
    "http",
    "model",
    "utils",
    "temp_cache",
    "rustls_backend",
    "chrono",
] }
poise = "0.5"

sqlx = { version = "0.7", features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
] }
